# git-bob

./: .gitbobignore  .gitignore  CITATION.cff  LICENSE  README.md  output_numbers.csv  pyproject.toml  pytest.ini  pytest.yml  readme.md  requirements.txt  sandbox_result.txt  setup.cfg  setup.py  test.ipynb
.github/workflows/: comment-on-issue.yml  deploy.yml  git-bob.yml  pytest.yml  respond-pull-request.yml  review-pull-request.yml
.gitlab/: .gitlab-ci.yml
actions/: claude.py  github_utilities.py  manager.py
docs/: installation-tutorial-gitlab.md  installation-tutorial.md  troubleshooting.md
examples/: for_loop_demo.ipynb  for_loop_demo.py
notebooks/: example_sigmoid_plot.ipynb  execnet_sandbox_test.ipynb  for_loop_demo.ipynb  sigmoid_function_plot.ipynb  sigmoid_plot.ipynb
playground/: cellpose_nuclei_segmentation.ipynb  image_analysis.ipynb  long_file.java  new_notebook.ipynb  plot_normal_distribution.ipynb  plot_normal_distribution.py  polars_notebook.ipynb  print_env_variable.ipynb  print_environment_variable.ipynb  print_llm_name.ipynb  python_basics.ipynb  python_basics2.ipynb  python_basics_7.ipynb  python_basics_while_loop.ipynb  readme.md  sigmoid_plot_example.py  test.csv  test.md  test.py  test2.ipynb  test2.py  test3.py  test4.py  vision_api_test.ipynb
playground/test_folder/: test.md
src/git_bob/: __init__.py  _ai_github_utilities.py  _claude.py  _create.py  _darth_d_utilities.py  _endpoints.py  _github_utilities.py  _gitlab_utilities.py  _logger.py  _terminal.py  _utilities.py  for_loop.py  for_loop_demo.py
src/git_bob/_ai_github_utilities/: __init__.py  _comment_on_issue.py  _review_pull_request.py  _split_issue_in_sub_issues.py  comment_on_issue.py  solve_issue.py  utilities.py
src/git_bob/_utilities/: __init__.py  _config.py  _env.py  _git.py  _io.py  _ipynb.py  _pptx.py  _text.py
src/git_bob/data/: blank_template.pptx  slide_template.pptx
src/git_bob/default_agent/: __init__.py  _deploy.py  _review_pull_request.py  _solve_github_issue.py
src/git_bob/examples/: for_loop_example.py
src/git_bob/plugins/: __init__.py
tests/: demo_for_loop.ipynb  for_loop_demo.ipynb  for_loops_example.ipynb  git_api_test.ipynb  test_agent.py  test_endpoints.py  test_github_utilities.py  test_gitlab_utilities.py  test_logger.py  test_terminal.py  test_utilities.py
