[metadata]
name = git-bob
version = attr: git_bob.__version__
description = An AI-based assistant for handling github issues and pull-requests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haesleinhuepf/git-bob
author = Robert Haase
author_email = robert.haase@uni-leipzig.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/git-bob/issues
    Documentation = https://github.com/haesleinhuepf/git-bob#README.md
    Source Code = https://github.com/haesleinhuepf/git-bob
    User Support = https://github.com/haesleinhuepf/git-bob/issues

[options]
packages = find:
install_requires =
    anthropic
    openai
    pygithub
    google-generativeai
    toolz

python_requires = >=3.9
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    git-bob = git_bob._terminal:command_line_interface
