[metadata]
name = git-bob
version = attr: git_bob.__version__
description = git-bob uses AI to solve Github-issues. It runs inside the Github CI, no need to install anything on your computer.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haesleinhuepf/git-bob
author = Robert Haase
author_email = robert.haase@uni-leipzig.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/git-bob/issues
    Documentation = https://github.com/haesleinhuepf/git-bob#README.md
    Source Code = https://github.com/haesleinhuepf/git-bob
    User Support = https://github.com/haesleinhuepf/git-bob/issues

[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.9
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml, *.pptx

[options.entry_points]
console_scripts =
    git-bob = git_bob._terminal:command_line_interface
    git-bob-remote = git_bob._terminal:remote_interface

git_bob.prompt_handlers =
    gpt-4o = git_bob._endpoints:prompt_chatgpt[api_key=OPENAI_API_KEY]
    claude = git_bob._endpoints:prompt_claude[api_key=ANTHROPIC_API_KEY]
    gemini = git_bob._endpoints:prompt_gemini[api_key=GOOGLE_API_KEY]
    mistral = git_bob._endpoints:prompt_mistral[api_key=MISTRAL_API_KEY]
