[metadata]
name = git-bob
version = attr: git_bob.__version__
description = git-bob uses AI to solve Github-issues. It runs inside the Github CI, no need to install anything on your computer.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haesleinhuepf/git-bob
author = Robert Haase
author_email = robert.haase@uni-leipzig.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/git-bob/issues
    Documentation = https://github.com/haesleinhuepf/git-bob#README.md
    Source Code = https://github.com/haesleinhuepf/git-bob
    User Support = https://github.com/haesleinhuepf/git-bob/issues

[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.9
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml, *.pptx

[options.entry_points]
console_scripts =
    git-bob = git_bob._terminal:command_line_interface
    git-bob-remote = git_bob._terminal:remote_interface

git_bob.prompt_handlers =
    gpt-4o = git_bob._endpoints:prompt_openai
    gpt4o = git_bob._endpoints:prompt_openai
    o1 = git_bob._endpoints:prompt_openai
    claude = git_bob._endpoints:prompt_anthropic
    gemini = git_bob._endpoints:prompt_googleai
    mistral = git_bob._endpoints:prompt_mistral
    pixtral = git_bob._endpoints:prompt_mistral
    github_models = git_bob._endpoints:prompt_azure
    kisski = git_bob._endpoints:prompt_kisski
    blablador = git_bob._endpoints:prompt_blablador

git_bob.triggers =
    review = git_bob._ai_github_utilities.review_pull_request
    respond = git_bob._ai_github_utilities.comment_on_issue
    think = git_bob._ai_github_utilities.comment_on_issue
    answer = git_bob._ai_github_utilities.comment_on_issue
    comment = git_bob._ai_github_utilities.comment_on_issue
    implement = git_bob._ai_github_utilities.solve_github_issue
    apply = git_bob._ai_github_utilities.solve_github_issue
    solve = git_bob._ai_github_utilities.solve_github_issue
    try = git_bob._ai_github_utilities.try_to_solve_github_issue
    split = git_bob._ai_github_utilities.split_issue_in_sub_issues
    deploy = git_bob._utilities.deploy